[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/BaseClass.png" type="Texture" id=1]
[ext_resource path="res://Assets/BlackBackground.png" type="Texture" id=2]
[ext_resource path="res://Scenes/School.gd" type="Script" id=3]
[ext_resource path="res://Assets/Pasillo.png" type="Texture" id=4]
[ext_resource path="res://Scenes/UI/Pause.gd" type="Script" id=5]
[ext_resource path="res://Scenes/UI/CameraLimits.tscn" type="PackedScene" id=6]
[ext_resource path="res://Characters/Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/UI/TileMapBlack.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17, 8 )

[sub_resource type="RectangleShape2D" id=2]

[node name="School" type="Node2D"]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="Pause" type="Control" parent="CanvasLayer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 320.0
margin_bottom = 180.0
script = ExtResource( 5 )

[node name="BlackOverlay" type="ColorRect" parent="CanvasLayer/Pause"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.498039 )

[node name="TileMap" parent="." instance=ExtResource( 8 )]
tile_data = PoolIntArray( -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, 1, 0, 0, 2, 0, 0, 16, 0, 0, 17, 0, 0, 65537, 0, 0, 65553, 0, 0, 131073, 0, 0, 131089, 0, 0, 196609, 0, 0, 196625, 0, 0, 262145, 0, 0, 262161, 0, 0, 327681, 0, 0, 327697, 0, 0, 393217, 0, 0, 393233, 0, 0, 458753, 0, 0, 458769, 0, 0, 524289, 0, 0, 524305, 0, 0, 589825, 0, 0, 589841, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 720903, 0, 0, 720907, 0, 0, 786439, 0, 0, 786443, 0, 0, 851975, 0, 0, 851979, 0, 0, 917511, 0, 0, 917515, 0, 0, 983047, 0, 0, 983051, 0, 0, 1048583, 0, 0, 1048587, 0, 0, 1114119, 0, 0, 1114123, 0, 0, 1179655, 0, 0, 1179659, 0, 0, 1245191, 0, 0, 1245195, 0, 0, 1310727, 0, 0, 1310728, 0, 0, 1310729, 0, 0, 1310730, 0, 0, 1310731, 0, 0 )

[node name="BlackBackground" type="Sprite" parent="."]
position = Vector2( 160, 0 )
texture = ExtResource( 2 )

[node name="BaseClass" type="Sprite" parent="."]
position = Vector2( 152, 40 )
texture = ExtResource( 1 )

[node name="Pasillo2" type="Sprite" parent="."]
position = Vector2( 152, 266.5 )
rotation = 3.14159
texture = ExtResource( 4 )

[node name="Pasillo" type="Sprite" parent="."]
position = Vector2( 152, 200.5 )
texture = ExtResource( 4 )

[node name="Salida" type="Area2D" parent="."]
position = Vector2( 0, -1 )

[node name="CollisionSalida" type="CollisionShape2D" parent="Salida"]
position = Vector2( 153, 299 )
shape = SubResource( 1 )

[node name="Game1" type="Area2D" parent="."]
position = Vector2( -6, 7 )
collision_mask = 0

[node name="CollisionGame1" type="CollisionShape2D" parent="Game1"]
position = Vector2( 85, 31 )
shape = SubResource( 2 )

[node name="Game2" type="Area2D" parent="."]
position = Vector2( -6, 7 )
collision_mask = 0

[node name="CollisionGame2" type="CollisionShape2D" parent="Game2"]
position = Vector2( 130, 31 )
shape = SubResource( 2 )

[node name="Game3" type="Area2D" parent="."]
position = Vector2( -6, 8 )
collision_mask = 0

[node name="CollisionGame3" type="CollisionShape2D" parent="Game3"]
position = Vector2( 178, 31 )
shape = SubResource( 2 )

[node name="Game4" type="Area2D" parent="."]
position = Vector2( -6, 7 )
collision_mask = 0

[node name="CollisionGame4" type="CollisionShape2D" parent="Game4"]
position = Vector2( 229, 31 )
shape = SubResource( 2 )

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 154, 146 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Player"]
remote_path = NodePath("../../CameraLimits")

[node name="CameraLimits" parent="." instance=ExtResource( 6 )]
position = Vector2( 154, 146 )
zoom = Vector2( 1.5, 1.5 )

[node name="TopLeft" parent="CameraLimits/Limits" index="0"]
position = Vector2( -74, -100 )

[node name="BottomRight" parent="CameraLimits/Limits" index="1"]
position = Vector2( 394, 312 )

[connection signal="body_entered" from="Salida" to="." method="_on_Salida_body_entered"]
[connection signal="body_entered" from="Game1" to="." method="_on_Game1_body_entered"]
[connection signal="mouse_entered" from="Game1" to="." method="_on_Game1_mouse_entered"]
[connection signal="body_entered" from="Game2" to="." method="_on_Game2_body_entered"]
[connection signal="body_entered" from="Game3" to="." method="_on_Game3_body_entered"]
[connection signal="body_entered" from="Game4" to="." method="_on_Game4_body_entered"]

[editable path="CameraLimits"]
